Fix scrollbar

--- a/musetric-front/src/components/GameOfLife/styles.scss
+++ b/musetric-front/src/components/GameOfLife/styles.scss
@@ -21,6 +21,10 @@
 	::-webkit-scrollbar-thumb:hover {
 		background: var(--content-text);
 	}
+
+	::-webkit-scrollbar-corner {
+		background: var(--app-bg);
+	  }
 }
 
 .game-header {
